<resources>
    <string name="app_name">TourismApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">date</string>
    <string name="take_photo_button">take_photo_button</string>
    <string name="imagepreview">imagePreview</string>
    <string name="photo_image">photo_image</string>
    <string name="MAPS_API_KEY">AIzaSyDu9rXDF9cchu4dnfswqZqHX3SCb5A4YO0</string>
    <string name="object_info">object_info</string>
    <string name="title_text">title_text</string>
    <string name="object_additional_info">object_additional_info</string>
    <string name="channel_name">My notification channel</string>
    <string name="channel_description">This is my notification description</string>
    <string name="login">LOGIN</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account">Don`t have an account?</string>
    <string name="create">Create</string>
    <string name="user_name">name</string>
    <string name="create_account">create account</string>
    <string name="go_to_login">Login</string>
    <string name="welcome_message">welcome_message</string>
    <string name="choose_search_radius">Choose search radius</string>
    <string name="reset_radius">Reset radius</string>
    <string name="search_settings">Search settings</string>
    <string name="choose_places_to_search">Choose places to search</string>
    <string name="interesting_places">Interesting places</string>
    <string name="food">Food</string>
    <string name="shops">Shops</string>
    <string name="transport_service">Transport service</string>
    <string name="banks">Banks</string>
    <string name="clear_all">Clear all</string>
    <string name="rating_1">1</string>
    <string name="rating_2">2</string>
    <string name="rating_3">3</string>
    <string name="rating_1_h">1H</string>
    <string name="rating_2_h">2H</string>
    <string name="rating_3_h">3H</string>
    <string name="choose_places_rating">Choose places rating</string>
    <string name="add_description">Add description</string>
    <string name="description_hint">You can add description here</string>
    <string name="save">Save</string>
    <string name="route_name">route_name</string>
    <string name="main">main</string>
    <string name="new_route">new_route</string>
    <string name="profile">profile</string>
    <string name="main_screen_info_message">Your routes will be displayed here. Let`s started. Just push button</string>
    <string name="data">route_data</string>
    <string name="route_distance">route_distance</string>
    <string name="route_duration">route_duration</string>
    <string name="route_avg_speed">route_avg_speed</string>
    <string name="apply_changes">APPLY CHANGES</string>
    <string name="change_photo">change photo</string>
</resources>