<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBlack"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/small_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/my_custom_button"
        android:padding="7dp"
        android:src="@drawable/photographer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.5"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:text="@string/create_account"
        android:enabled="false"
        android:textColor="@color/login_button_colors"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/user_name"
        app:layout_constraintEnd_toEndOf="@id/small_logo"
        app:layout_constraintStart_toStartOf="@id/small_logo"
        app:layout_constraintTop_toBottomOf="@id/small_logo"
        app:layout_constraintVertical_bias="0.5"  />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:textAlignment="center"
        android:textColor="@color/myOrange"
        android:textColorHint="#B3FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/small_logo"
        app:layout_constraintStart_toStartOf="@id/small_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textAlignment="center"
        android:textColor="@color/myOrange"
        android:textColorHint="#B3FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/small_logo"
        app:layout_constraintStart_toStartOf="@id/small_logo"
        app:layout_constraintTop_toBottomOf="@id/user_name"
        app:layout_constraintVertical_bias="0.05"  />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/myOrange"
        android:textColorHint="#B3FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/small_logo"
        app:layout_constraintStart_toStartOf="@id/small_logo"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintVertical_bias="0.05" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account?"
        android:textAlignment="textStart"
        android:textColor="@color/myOrange"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/go_to_login_button"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="@id/go_to_login_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/go_to_login_button"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/close_button_background"
        android:text="@string/go_to_login"
        android:textAlignment="center"
        android:textColor="@color/myOrange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />


</androidx.constraintlayout.widget.ConstraintLayout>